[tool.poetry]
name = "notion-apilib"
version = "0.0.1-alpha"
description = "This library allows developers to call Notion API using custom DSL Pydantic-validated classes and API methods"
authors = ["Real1ty <vavro.matej3@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Real1tyy/notion-apilib-python"
repository = "https://github.com/Real1tyy/notion-apilib-python"
documentation = "https://github.com/Real1tyy/notion-apilib-python/wiki"
keywords = ["notion", "api", "pydantic", "dsl", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]


[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.3"
anyio = "^4.4.0"
pydantic = "^2.8.2"
asttokens = "2.4.1"
backcall = "0.2.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
build = "1.2.1"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
decorator = "5.1.1"
defusedxml = "0.7.1"
dependency-injector = "4.41.0"
dnspython = "2.6.1"
docopt = "0.6.2"
executing = "2.0.1"
fastjsonschema = "2.20.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
jedi = "0.19.1"
jinja2 = "3.1.4"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
mako = "1.3.5"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mccabe = "0.7.0"
pandocfilters = "1.5.1"
parso = "0.8.4"
pexpect = "4.9.0"
pickleshare = "0.7.5"
platformdirs = "4.2.2"
prompt-toolkit = "3.0.47"
psycopg2 = "2.9.9"
ptyprocess = "0.7.0"
pycodestyle = "2.12.0"
pyflakes = "3.2.0"
pygments = "2.18.0"
pymongo = "4.8.0"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pyzmq = "26.0.3"
referencing = "0.35.1"
returns = "0.23.0"
rpds-py = "0.18.1"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.5"
tinycss2 = "1.3.0"
tornado = "6.4.1"
types-requests = "2.32.0.20240622"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
wcwidth = "0.2.13"
webencodings = "0.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
isort = "^5.13.2"
annotated-types = "^0.7.0"
flake8 = "^7.1.1"
flake8-pydantic = "^0.3.1"
autopep8 = "2.3.1"
ipython = "8.12.3"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
jupyterlab-pygments = "0.3.0"
mistune = "3.0.2"
mypy = "1.10.1"
mypy-extensions = "1.0.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
pip-tools = "7.4.1"
pip-upgrade-outdated = "1.5"
pure-eval = "0.2.2"
stack-data = "0.6.3"
traitlets = "5.14.3"
yarg = "0.1.9"
faker = "^27.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
